added set up page

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -10,6 +10,8 @@ target 'DatingApp' do
 
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
+  pod 'react-native-slider', :path => '../node_modules/@react-native-community/slider'
+
   target 'DatingAppTests' do
     inherit! :complete
     # Pods for testing
