--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/slider": "^3.0.3",
     "@react-native-firebase/app": "^10.0.0",
     "@react-native-firebase/firestore": "^10.0.0",
     "react": "16.13.1",
