--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@react-native-community/slider": "^3.0.3",
-    "@react-native-firebase/app": "^10.0.0",
-    "@react-native-firebase/firestore": "^10.0.0",
+    "@react-native-firebase/app": "^10.1.0",
+    "@react-native-firebase/auth": "^10.1.0",
+    "@react-native-firebase/firestore": "^10.1.0",
     "react": "16.13.1",
     "react-native": "0.63.3",
+    "react-native-bcrypt": "^2.4.0",
     "react-native-paper": "^4.4.1",
     "react-native-vector-icons": "^7.1.0",
     "react-router-native": "^5.2.0"
