--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-regular-svg-icons": "^5.15.1",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/react-native-fontawesome": "^0.2.6",
     "@react-native-community/slider": "^3.0.3",
     "@react-native-firebase/app": "^10.1.0",
     "@react-native-firebase/auth": "^10.1.0",
@@ -18,6 +22,8 @@
     "react-native": "0.63.3",
     "react-native-bcrypt": "^2.4.0",
     "react-native-paper": "^4.4.1",
+    "react-native-svg": "^12.1.0",
+    "react-native-svg-transformer": "^0.14.3",
     "react-native-vector-icons": "^7.1.0",
     "react-router-native": "^5.2.0"
   },
