Added new features.

--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-native-fontawesome": "^0.2.6",
+    "@react-native-community/datetimepicker": "^3.0.8",
     "@react-native-community/slider": "^3.0.3",
     "@react-native-firebase/app": "^10.1.0",
     "@react-native-firebase/auth": "^10.1.0",
     "@react-native-firebase/firestore": "^10.1.0",
+    "@react-native-picker/picker": "^1.9.4",
+    "bad-words": "^3.0.4",
     "react": "16.13.1",
     "react-native": "0.63.3",
     "react-native-bcrypt": "^2.4.0",
