--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "16.13.1",
     "react-native": "0.63.3",
     "react-native-bcrypt": "^2.4.0",
+    "react-native-gifted-chat": "^0.16.3",
     "react-native-paper": "^4.4.1",
     "react-native-svg": "^12.1.0",
     "react-native-svg-transformer": "^0.14.3",
