--- a/package.json
+++ b/package.json
@@ -21,9 +21,13 @@
     "@react-native-firebase/firestore": "^10.1.0",
     "@react-native-picker/picker": "^1.9.4",
     "bad-words": "^3.0.4",
+    "gravatar": "^1.8.1",
+    "ngeohash": "^0.6.3",
     "react": "16.13.1",
     "react-native": "0.63.3",
     "react-native-bcrypt": "^2.4.0",
+    "react-native-get-location": "^2.0.0",
+    "react-native-numeric-input": "^1.8.3",
     "react-native-paper": "^4.4.1",
     "react-native-svg": "^12.1.0",
     "react-native-svg-transformer": "^0.14.3",
