added pass change and recover

--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-native-svg": "^12.1.0",
     "react-native-svg-transformer": "^0.14.3",
     "react-native-vector-icons": "^7.1.0",
-    "react-router-native": "^5.2.0"
+    "react-router-native": "^5.2.0",
+    "validator": "^13.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
