added saved and fixed location and img on main page

--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "@react-native-firebase/auth": "^10.1.0",
     "@react-native-firebase/firestore": "^10.1.0",
     "@react-native-picker/picker": "^1.9.4",
+    "country-code-lookup": "0.0.18",
+    "faker": "^5.1.0",
+    "firebase-admin": "^9.4.2",
     "geofire-common": "^5.1.0",
     "gps-distance": "0.0.4",
     "gravatar": "^1.8.1",
