--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-native-firebase/app": "^10.1.0",
     "@react-native-firebase/auth": "^10.1.0",
     "@react-native-firebase/firestore": "^10.1.0",
+    "@react-native-firebase/storage": "^10.4.1",
     "@react-native-picker/picker": "^1.9.4",
     "country-code-lookup": "0.0.18",
     "faker": "^5.1.0",
@@ -32,6 +33,7 @@
     "react-native-bcrypt": "^2.4.0",
     "react-native-get-location": "^2.0.0",
     "react-native-gifted-chat": "^0.16.3",
+    "react-native-image-crop-picker": "^0.35.2",
     "react-native-paper": "^4.4.1",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-safe-area-view": "^1.1.1",
