--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "gps-distance": "0.0.4",
     "gravatar": "^1.8.1",
     "ngeohash": "^0.6.3",
-    "react": "16.13.1",
+    "react": "^16.13.1",
+    "react-dom": "^17.0.1",
     "react-native": "0.63.3",
     "react-native-bcrypt": "^2.4.0",
     "react-native-get-location": "^2.0.0",
@@ -34,9 +35,12 @@
     "react-native-safe-area-view": "^1.1.1",
     "react-native-svg": "^12.1.0",
     "react-native-svg-transformer": "^0.14.3",
+    "react-native-uuid-generator": "^6.1.1",
     "react-native-vector-icons": "^7.1.0",
     "react-router-native": "^5.2.0",
-    "validator": "^13.5.2"
+    "react-singletons": "^1.3.3",
+    "validator": "^13.5.2",
+    "react-router-dom": "^5.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
