--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,9 +1,10 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    // ext.kotlinVersion = '1.3.0' // (check what the latest version is!)
     ext {
         buildToolsVersion = "29.0.2"
-        minSdkVersion = 16
+        minSdkVersion = 20
         compileSdkVersion = 29
         targetSdkVersion = 29
     }
@@ -16,6 +17,7 @@ buildscript {
         classpath("com.google.gms:google-services:4.3.4")
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+        // classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
     }
 }
 
@@ -36,5 +38,10 @@ allprojects {
         google()
         jcenter()
         maven { url 'https://www.jitpack.io' }
+
+        maven {
+            // All of Detox' artifacts are provided via the npm module
+            url "$rootDir/../node_modules/detox/Detox-android"
+        }
     }
 }
