--- a/package.json
+++ b/package.json
@@ -51,10 +51,12 @@
     "@babel/runtime": "^7.8.4",
     "@react-native-community/eslint-config": "^1.1.0",
     "babel-jest": "^25.1.0",
+    "detox": "^18.2.2",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "eslint": "^6.5.1",
-    "jest": "^25.5.4",
+    "jest": "^26.0.1",
+    "jest-circus": "^26.0.1",
     "jest-environment-enzyme": "^7.1.2",
     "jest-enzyme": "^7.1.2",
     "metro-react-native-babel-preset": "^0.59.0",
